--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
                 <a href="#" id="save-menu-btn" class="dropdown-toggle"><i class="fas fa-save"></i> Save As...</a>
                 <div id="save-menu" class="dropdown-content">
                     <a href="#" id="save-fountain-btn">.fountain (Text)</a>
-                    <a href="#" id="save-pdf-english-btn">.pdf (Selectable Text)</a>
-                    <a href="#" id="save-pdf-unicode-btn">.pdf (Unicode Image)</a>
+                    <a href="#" id="save-pdf-btn">.pdf (Professional/Unicode)</a>
                     <a href="#" id="save-filmproj-btn" class="pro-feature">.filmproj (for To Make/To Sched)</a>
                 </div>
             </div>
