--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@
             <div class="editor-area">
                 <textarea id="fountain-input" spellcheck="false" autocomplete="off" autocapitalize="off" autocorrect="off"></textarea>
                 <div id="desktop-side-toolbar">
-                    <button class="action-btn" data-action="scene" title="Cycle Scene (INT./EXT.)">I/E</button>
-                    <button class="action-btn" data-action="time" title="Cycle Time of Day (DAY/NIGHT)">D/N</button>
-                    <button class="action-btn" data-action="caps" title="Toggle Case (UPPER/lower)">Aa</button>
-                    <button class="action-btn" data-action="parens" title="Add Parentheses">()</button>
-                    <button class="action-btn" data-action="transition" title="Cycle Transition">TO:</button>
+					<button class="action-btn" data-action="scene" title="Cycle Scene (INT./EXT.)">I/E</button>
+					<button class="action-btn" data-action="time" title="Cycle Time of Day (DAY/NIGHT)">D/N</button>
+					<button class="action-btn" data-action="character" title="Format as Character">C</button>
+					<button class="action-btn" data-action="dialogue" title="Format as Dialogue">D</button>
+					<button class="action-btn" data-action="parenthetical" title="Add Parentheses">()</button>
+					<button class="action-btn" data-action="transition" title="Cycle Transition">TO:</button>
           <!-- NEW: Focus Mode Button (Shows in Fullscreen Only) -->
     <button id="focus-mode-btn" class="action-btn" style="display: none; background: linear-gradient(135deg, #f59e0b, #d97706); margin-top: 10px; font-size: 0.85rem;" title="Toggle Focus Mode">
         Focus
@@ -129,11 +130,12 @@
     
     <div id="mobile-keyboard-toolbar" class="mobile-keyboard-toolbar">
     <div class="keyboard-toolbar-content">
-        <button class="keyboard-btn" data-action="scene" title="INT/EXT">I/E</button>
-        <button class="keyboard-btn" data-action="time" title="DAY/NIGHT">D/N</button>
-        <button class="keyboard-btn" data-action="caps" title="CAPS">Aa</button>
-        <button class="keyboard-btn" data-action="parens" title="Parentheses">()</button>
-        <button class="keyboard-btn" data-action="transition" title="Transitions">TO:</button>
+		<button class="keyboard-btn" data-action="scene" title="INT/EXT">I/E</button>
+		<button class="keyboard-btn" data-action="time" title="DAY/NIGHT">D/N</button>
+		<button class="keyboard-btn" data-action="character" title="Character">C</button>
+		<button class="keyboard-btn" data-action="dialogue" title="Dialogue">D</button>
+		<button class="keyboard-btn" data-action="parens" title="Parentheses">()</button>
+		<button class="keyboard-btn" data-action="transition" title="Transitions">TO:</button>
     </div>
 </div>
     
